[package]
name = "mirador"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.9"
pollster = "0.4.0"
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4"
glyphon = "0.8.0"
image = "0.25.6"
kira = {version = "0.10.8", features = ["mp3", "ogg"]}
dhat = { version = "0.3", optional = true }
wgpu = "24.0.5"

[features]
dhat-heap = ["dhat"]
